Changelog for GitPackageManagement.

GitPackageManagement 0.9.0 alpha
==============
- Fixed updating TVs
- Added build section to the config file
- Added build package option

GitPackageManagement 0.8.0 alpha
==============
- Added build schema option
- Added preserve package option that will copy assets & core files to MODX directory
- Added ability to add Resources
- Update indexes when altering table
- Fixed removing not-used tables
- Added an option to alter database
- Fixed creating system settings without a namespace

GitPackageManagement 0.7.1 alpha
==============
- Fixed PHP 5.3 incompatibility
- Fixed comment in generated build.config

GitPackageManagement 0.7.0 alpha
==============
- Clear menu cache after installing/updating/removing package
- Fixed updating actions and menus
- Added support for string actions in menus (as used from MODX 2.3)
- Added support for different prefix in system settings

GitPackageManagement 0.6.1 alpha
==============
- Fixed setup options
- Fixed adding more menus

GitPackageManagement 0.6.0 alpha
==============
- #9 Added option to add SimpleObjects (via modx->loadClass)

GitPackageManagement 0.5.0 alpha
==============
- #8 Fixed error when updating package without DB
- #7 Added check if configs are writable
- #2 Cleared cache after install, weired directories are not creating in core/components anymore

GitPackageManagement 0.4.0 alpha
==============
- Added basic support for TVs

GitPackageManagement 0.3.1 alpha
==============
- Added lexicon entries for system settings

GitPackageManagement 0.3.0 alpha
==============
- Added update package
- Added update package and recreate database

GitPackageManagement 0.2.0 alpha
==============
- Removed native support for Git commands

GitPackageManagement 0.1.2 alpha
==============
- Added base href for packages directory

GitPackageManagement 0.1.1 alpha
==============
- Fixed elements path

GitPackageManagement 0.1.0 alpha
==============