@@ -1,5 +1,7 @@
 Changelog for GitPackageManagement.
 
+- Added option to add properties to elements
+
 GitPackageManagement 0.9.0 alpha
 ==============
 - Fixed updating TVs
